--- a/frontend/Bitki.Blazor/Components/Pages/EtnokullanimList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/EtnokullanimList.razor
@@ -4,7 +4,7 @@
 @using Bitki.Blazor.Components.Common
 @using Bitki.Blazor.Services
 @using Microsoft.AspNetCore.Components.Authorization
-@using Bitki.Blazor.Components.Common
+
 @using static Bitki.Blazor.Components.Common.RecordInspector<Bitki.Blazor.Models.EtnokullanimViewModel>
 @inject HttpClient Http
 @inject AuthenticatedHttpClient AuthHttp
@@ -63,7 +63,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label">Lokalite</label>
-                    <SearchableSelect Options="localityOptions" Placeholder="Lokalite seçin" @bind-Value="EditingLocalityId" />
+                    <SearchableSelect Options="localityOptions" Placeholder="Lokalite seçin"
+                        @bind-Value="EditingLocalityId" />
                 </div>
             </div>
             <div class="modal-footer">
@@ -100,14 +101,19 @@ new ColumnDef { Title = "Açıklama", PropertyName = "Description" },
 new ColumnDef { Title = "Lokalite", PropertyName = "LocalityName" }
 };
 
-    private List<InspectorField> inspectorFields = new()
+    private List<InspectorField> inspectorFields = new();
+
+    protected override async Task OnInitializedAsync()
+    {
+        inspectorFields = new()
 {
 new InspectorField { Label = "Açıklama", PropertyName = "Description", Editable = true },
-new InspectorField { Label = "Lokalite", PropertyName = "LocalityName", Editable = true, RenderEditControl = LocalitySelector },
+new InspectorField { Label = "Lokalite", PropertyName = "LocalityName", Editable = true, RenderEditControl =
+LocalitySelector },
 new InspectorField { Label = "Oluşturma Tarihi", PropertyName = "CreatedDate", Editable = false }
 };
-
-    protected override async Task OnInitializedAsync() => await LoadDataWithFilter();
+        await LoadDataWithFilter();
+    }
 
     private async Task LoadDataWithFilter()
     {
@@ -286,7 +292,11 @@ new InspectorField { Label = "Oluşturma Tarihi", PropertyName = "CreatedDate", 
         builder.AddAttribute(1, "Options", localityOptions);
         builder.AddAttribute(2, "Placeholder", "Lokalite seçin");
         builder.AddAttribute(3, "Value", (long?)item.LocalityId);
-        builder.AddAttribute(4, "ValueChanged", EventCallback.Factory.Create<long?>(this, id => { item.LocalityId = id.HasValue ? (int)id.Value : 0; SyncLocality(item); }));
+        builder.AddAttribute(4, "ValueChanged", EventCallback.Factory.Create<long?>(this, id =>
+    {
+        item.LocalityId = id.HasValue
+    ? (int)id.Value : 0; SyncLocality(item);
+    }));
         builder.CloseComponent();
     };
 }
